# numerical-optimizaiton

./: CMakeLists.txt  LICENSE  ReadMe.md
NonlinearLeastSquaresProblems/GuassNewton/: CMakeLists.txt  GuassNewton.cpp
NonlinearLeastSquaresProblems/GuassNewtonSmallJac/: CMakeLists.txt  GuassNewtonSmallJac.cpp
NonlinearLeastSquaresProblems/LevenbergMarquardt/: CMakeLists.txt  LevenbergMarquardt.cpp
NonlinearLeastSquaresProblems/LevenbergMarquardtSmallJac/: CMakeLists.txt  LevenbergMarquardtSmallJac.cpp
UnconstrainedMethod/DampedNewton/: CMakeLists.txt  DampedNewton.cpp
UnconstrainedMethod/Newton/: CMakeLists.txt  Newton.cpp
UnconstrainedMethod/NewtonLM/: CMakeLists.txt  NewtonLM.cpp
UnconstrainedMethod/QuasiNewton/: CMakeLists.txt  QuasiNewton.cpp
UnconstrainedMethod/Steepest_Descent/: CMakeLists.txt  Steepest_Descent.cpp
